removed polymer import, changed default size, fixed bower.json
I removed the Polymer import in the `index.html` file because it
should not be there anyway, users should import in their own
`index.html`, changed the demo size to `1000x500` because it works
better when testing, and added the `main.js` to `bower.json`

--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
     "Ricard Sole <ricard.solecasas@gmail.com>"
   ],
   "description": "A customizable slider using web components (Polymer.js) without jQuery",
-  "main": "Slider.js",
+  "main": "main.js",
   "keywords": [
     "slider",
     "polymer",
